<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="file_info" translatable="false">%1$s | %2$s</string>
    <string name="value_byte" translatable="false">%1$s B</string>
    <string name="value_kb" translatable="false">%1$s KB</string>
    <string name="value_mb" translatable="false">%1$s MB</string>
    <string name="value_gb" translatable="false">%1$s GB</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="number_one" translatable="false">1</string>
    <string name="number_two" translatable="false">2</string>
    <string name="number_three" translatable="false">3</string>
    <string name="number_four" translatable="false">4</string>
    <string name="number_five" translatable="false">5</string>
    <string name="number_six" translatable="false">6</string>
    <string name="number_seven" translatable="false">7</string>
    <string name="number_eight" translatable="false">8</string>
    <string name="number_nine" translatable="false">9</string>
    <string name="decimal_symbol" translatable="false">.</string>
    <string name="equal_sign" translatable="false">&#61;</string>
    <string name="add_sign" translatable="false">&#43;</string>
    <string name="minus_sign" translatable="false">&#8722;</string>
    <string name="multiply_sign" translatable="false">&#215;</string>
    <string name="divide_sign" translatable="false">&#247;</string>
    <string name="value_characters" translatable="false">%1$d/%2$d</string>
    <string name="hint_email" translatable="false">your_email@example.com</string>
    <string name="option_reset_password_email" translatable="false">Email</string>
    <string name="subject_request_password_support" translatable="false">Retrieve password - HideSuper</string>
    <string name="ext_txt" translatable="false">.txt</string>
    <string name="ok" translatable="false">OK</string>
    <string name="sale_off" translatable="false">70% Off</string>
    <string-array name="arr_language">
        <item>sys,Auto</item>
        <item>az,Azərbaycan</item>
        <item>my,Burmese</item>
        <item>cs,Čeština</item>
        <item>de,Deutsch</item>
        <item>en,English</item>
        <item>es,Español</item>
        <item>tl,Filipino</item>
        <item>fr,Français</item>
        <item>in,Indonesia</item>
        <item>it,Italiano</item>
        <item>hu,Magyar</item>
        <item>ms,Malaysia</item>
        <item>nl,Nederlands</item>
        <item>pl,Polski</item>
        <item>pt,Português</item>
        <item>ro,Română</item>
        <item>sv,Svenska</item>
        <item>vi,Tiếng Việt</item>
        <item>tr,Türkçe</item>
        <item>be,Беларуская</item>
        <item>bg,Български</item>
        <item>kk,Қазақ тілі</item>
        <item>sr,Српски</item>
        <item>ru,Русский</item>
        <item>uk,Українська</item>
        <item>km,ភាសាខ្មែរ</item>
        <item>ar,عربى</item>
        <item>ur,اردو</item>
        <item>fa,فارسی</item>
        <item>hi,हिन्दी</item>
        <item>bn,বাংলা</item>
        <item>th,ไทย</item>
        <item>ko,한국어</item>
        <item>ja,日本語</item>
        <item>zh,简体中文</item>
        <item>zh-rTW,繁體中文</item>
    </string-array>
    <string name="app_name">Calculator Demo</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="help">Help</string>
    <string name="new_folder">Create new folder</string>
    <string name="folder_name">Folder name</string>
    <string name="err_folder_name_empty">Please enter folder name</string>
    <string name="err_file_name_empty">Please enter file name</string>
    <string name="home">Home</string>
    <string name="folder">Folder</string>
    <string name="private_folder">Private folder</string>
    <string name="folder_default">Default</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="note">Note</string>
    <string name="add_note">Add note</string>
    <string name="other">Other</string>
    <string name="camera">Camera</string>
    <string name="from_folder">From folder</string>
    <string name="remove_ads">Remove ads</string>
    <string name="settings">Settings</string>
    <string name="no_data">Add item to hide</string>
    <string name="no_file_found">No file found</string>
    <string name="get_started">Get Started</string>
    <string name="grant">Grant</string>
    <string name="title_grant_permission">Necessary Permissions</string>
    <string name="msg_permission_storage">HideS needs the permission to access photos, media and files to work properly</string>
    <string name="err_common">Something went wrong, please try again</string>
    <string name="err_password_invalid">Please enter at least 4-digit password then press = button</string>
    <string name="err_password_not_match">Password not match</string>
    <string name="msg_confirm_password">Confirm password</string>
    <string name="msg_password_changed_success">Password changed successfully</string>
    <string name="set_security_question">Set security question</string>
    <string name="set_security_question_success">Set security question successfully</string>
    <string name="security_desc">To help you reset password in case you forgot it</string>
    <string name="select_question">Select question</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="confirm">Confirm</string>
    <string name="got_it">Got it</string>
    <string name="tips_security"><font color="#ffffff"><b>How to reset password?</b></font>\n\n<big>&#8226;</big> You can enter <font color="#5DA3D4">123123=</font> in Sign-in screen to reset the password by answering the security question or email.\n\n<big>&#8226;</big> Don\'t let others know your answer.\n\n<big>&#8226;</big> Not case sensitive.</string>
    <string name="err_answer_empty">Please answer the question</string>
    <string name="your_question">Your question</string>
    <string name="your_answer">Your answer</string>
    <string name="your_email">Your email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="err_email_empty">Please enter your email</string>
    <string name="set_recovery_email">Set recovery email</string>
    <string name="set_recovery_email_success">Set recovery email successfully</string>
    <string name="reset_password_by">Reset password by</string>
    <string name="option_reset_password_question">Answer security question</string>
    <string name="or">or</string>
    <string name="try_another_way">Try another way</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_question_desc">Verify by answering your security question</string>
    <string name="reset_email_desc">Verify by entering your recovery email</string>
    <string name="reset_activities_desc">You have %1$d times left to try verifying your activities</string>
    <string name="wrong_answer">It\'s wrong, please try again</string>
    <string name="wrong_answer_activity">It\'s wrong, you have %1$d times left</string>
    <string name="err_question_not_set">Can not reset password by security question because you have not set one</string>
    <string name="err_email_not_set">Can not reset password by email because you have not set one</string>
    <string name="err_network_not_available">Network not available</string>
    <string name="title_choose_email_composer">Send email by</string>
    <string name="question_installed_time">1. When did you install the app?</string>
    <string name="question_logged_in_time">2. When was the last time you logged in?</string>
    <string name="question_last_added_content_type">3. Which was the last content you added?</string>
    <string name="err_have_no_access_to_file">Error access to this file, please try moving the file to Download folder then try again</string>
    <string name="select_folder_to_save">Select folder to save</string>
    <string name="select_folder_to_move">Select folder to move</string>
    <string name="err_no_folder_selected">Please select a folder</string>
    <string name="hide_value">Hide (%1$d)</string>
    <string name="unhide_title">%1$d files will be unhidden and saved to</string>
    <string name="unhide">Unhide</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="all">All</string>
    <string name="no_file_selected">No file selected</string>
    <string name="no_note_selected">No note selected</string>
    <string name="msg_hid_success">Hid successfully</string>
    <string name="msg_moved_success">Moved successfully</string>
    <string name="msg_deleted_success">Deleted successfully</string>
    <string name="msg_unhide_success">Unhidden successfully</string>
    <string name="msg_cant_delete_last_folder">Can\'t delete the last folder</string>
    <string name="file_name">File name</string>
    <string name="err_folder_exists_already">Folder exists already</string>
    <string name="err_file_exists_already">File exists already</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="last_modified">Last modified</string>
    <string name="internal_storage">Internal storage</string>
    <string name="original_path">Original path</string>
    <string name="delete_title">Delete %1$d files</string>
    <string name="delete_message">Are you sure of deleting? The deleted files can not be restored</string>
    <string name="delete_note_title">Delete %1$d notes</string>
    <string name="delete_note_message">Are you sure of deleting? The deleted notes can not be restored</string>
    <string name="export_note_title">Export %1$d notes</string>
    <string name="export_note_message">The selected notes will be exported to:\n%1$s</string>
    <string name="title">Title</string>
    <string name="enter_note_content">Enter note content</string>
    <string name="err_note_empty">Please enter note</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="export">Export</string>
    <string name="exported_success">Exported to %1$s</string>
    <string name="err_no_camera_found">No camera found</string>
    <string name="tap_again_to_exit">Click again to exit</string>
    <string name="rotate">Rotate</string>
    <string name="general">General</string>
    <string name="change_language">Change language</string>
    <string name="security">Security</string>
    <string name="change_password">Change password</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="feedback_and_suggestion">Feedback &amp; Suggestion</string>
    <string name="files_anti_lost">Files anti-lost note</string>
    <string name="terms_and_policy">Terms &amp; Policy</string>
    <string name="about_us">About us</string>
    <string name="files_anti_lost_desc"><big>&#8226;</big> All files are located in the <font color="#5DA3D4">.hideS</font> folder of your device root directory (.hideS is a hidden folder, you may need to enable to see it), don\'t delete or change any file in the folder.\n\n<big>&#8226;</big> Remember to backup your files before factory reset or switching to a new device.\n\n<big>&#8226;</big> Don\'t let Clean tools delete or change any file in the folder.\n\n<big>&#8226;</big> In case you want to switch to a new device, you can copy whole the folder and paste it to your new device root directory.</string>
</resources>