<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/lbl_message"
        style="@style/TextView.Regular"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_32"
        android:gravity="center_horizontal"
        android:text="@string/err_password_invalid"
        android:textSize="@dimen/text_18"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/lbl_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl_result"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16"
        android:gravity="end"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_22"
        app:layout_constraintBottom_toTopOf="@+id/lbl_expression"
        app:layout_constraintEnd_toStartOf="@+id/img_clear"
        app:layout_constraintStart_toStartOf="@+id/lbl_expression"
        app:layout_goneMarginEnd="@dimen/dimen_16" />

    <ImageView
        android:id="@+id/img_clear"
        android:layout_width="@dimen/dimen_40"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginEnd="@dimen/dimen_6"
        android:background="@drawable/btn_primary_round"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_10"
        android:src="@drawable/ic_backspace_white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_result" />

    <TextView
        android:id="@+id/lbl_expression"
        style="@style/TextView.Medium"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:autoSizeMinTextSize="@dimen/text_12"
        android:autoSizeTextType="uniform"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_32"
        app:layout_constraintBottom_toTopOf="@+id/vw_bar_keypad"
        app:layout_constraintEnd_toEndOf="@+id/btn_delete"
        app:layout_constraintStart_toStartOf="@+id/btn_seven" />

    <View
        android:id="@+id/vw_bar_keypad"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/divider"
        android:layout_marginBottom="@dimen/dimen_16"
        android:alpha="0.5"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_seven"
        style="@style/Button.Keypad"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/number_seven"
        app:layout_constraintBottom_toTopOf="@+id/btn_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_eight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_eight"
        style="@style/Button.Keypad"
        android:text="@string/number_eight"
        app:layout_constraintBottom_toBottomOf="@+id/btn_seven"
        app:layout_constraintEnd_toStartOf="@+id/btn_nine"
        app:layout_constraintStart_toEndOf="@+id/btn_seven" />

    <TextView
        android:id="@+id/btn_nine"
        style="@style/Button.Keypad"
        android:text="@string/number_nine"
        app:layout_constraintBottom_toBottomOf="@+id/btn_seven"
        app:layout_constraintEnd_toStartOf="@+id/btn_divide"
        app:layout_constraintStart_toEndOf="@+id/btn_eight" />

    <ImageView
        android:id="@+id/btn_delete"
        style="@style/Button.Keypad.Small"
        android:background="@drawable/btn_primary_radius_24"
        android:contentDescription="@string/app_name"
        android:rotation="@integer/rotate_0"
        android:src="@drawable/ic_backspace_white"
        app:layout_constraintBottom_toTopOf="@+id/btn_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_nine"
        app:layout_constraintTop_toTopOf="@+id/btn_seven" />

    <TextView
        android:id="@+id/btn_divide"
        style="@style/Button.Keypad.Small"
        android:background="@drawable/btn_primary_radius_24"
        android:text="@string/divide_sign"
        app:layout_constraintBottom_toTopOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_nine"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete" />

    <TextView
        android:id="@+id/btn_four"
        style="@style/Button.Keypad"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/number_four"
        app:layout_constraintBottom_toTopOf="@+id/btn_one"
        app:layout_constraintEnd_toStartOf="@+id/btn_five"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_five"
        style="@style/Button.Keypad"
        android:text="@string/number_five"
        app:layout_constraintBottom_toBottomOf="@+id/btn_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_six"
        app:layout_constraintStart_toEndOf="@+id/btn_four" />

    <TextView
        android:id="@+id/btn_six"
        style="@style/Button.Keypad"
        android:text="@string/number_six"
        app:layout_constraintBottom_toBottomOf="@+id/btn_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_multiply"
        app:layout_constraintStart_toEndOf="@+id/btn_five" />

    <TextView
        android:id="@+id/btn_multiply"
        style="@style/Button.Keypad.Small"
        android:background="@drawable/btn_primary_radius_24"
        android:text="@string/multiply_sign"
        android:textSize="@dimen/text_20"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_six"
        app:layout_constraintTop_toBottomOf="@+id/btn_divide" />

    <TextView
        android:id="@+id/btn_one"
        style="@style/Button.Keypad"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/number_one"
        app:layout_constraintBottom_toTopOf="@+id/btn_decimal"
        app:layout_constraintEnd_toStartOf="@+id/btn_two"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_two"
        style="@style/Button.Keypad"
        android:text="@string/number_two"
        app:layout_constraintBottom_toBottomOf="@+id/btn_one"
        app:layout_constraintEnd_toStartOf="@+id/btn_three"
        app:layout_constraintStart_toEndOf="@+id/btn_one" />

    <TextView
        android:id="@+id/btn_three"
        style="@style/Button.Keypad"
        android:text="@string/number_three"
        app:layout_constraintBottom_toBottomOf="@+id/btn_one"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/btn_two" />

    <TextView
        android:id="@+id/btn_minus"
        style="@style/Button.Keypad.Small"
        android:background="@drawable/btn_primary_radius_24"
        android:text="@string/minus_sign"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_equal"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiply" />

    <TextView
        android:id="@+id/btn_decimal"
        style="@style/Button.Keypad"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/decimal_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_zero"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_zero"
        style="@style/Button.Keypad"
        android:text="@string/number_zero"
        app:layout_constraintBottom_toBottomOf="@+id/btn_decimal"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal"
        app:layout_constraintStart_toEndOf="@+id/btn_decimal" />

    <TextView
        android:id="@+id/btn_equal"
        style="@style/Button.Keypad"
        android:background="@drawable/btn_accent_radius_24"
        android:text="@string/equal_sign"
        app:layout_constraintBottom_toBottomOf="@+id/btn_decimal"
        android:textSize="@dimen/text_28"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/btn_zero" />

    <TextView
        android:id="@+id/btn_add"
        style="@style/Button.Keypad.Small"
        android:background="@drawable/btn_primary_radius_24"
        android:text="@string/add_sign"
        app:layout_constraintBottom_toBottomOf="@+id/btn_decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_equal"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />
</androidx.constraintlayout.widget.ConstraintLayout>