<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_primary_radius_10"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_16"
    android:paddingVertical="@dimen/dimen_8">

    <TextView
        style="@style/TextView.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:gravity="center_horizontal"
        android:text="@string/reset_password_by"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/btn_question"
        style="@style/Button.AccentRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/option_reset_password_question"
        android:textSize="@dimen/text_16" />

    <TextView
        style="@style/TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_6"
        android:text="@string/or"
        android:textColor="@color/textColorSecondary" />

    <TextView
        android:id="@+id/btn_email"
        style="@style/Button.DarkRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_8"
        android:minWidth="@dimen/dimen_150"
        android:text="@string/option_reset_password_email"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/btn_cancel"
        style="@style/Button.PrimaryRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/cancel"
        android:textColor="@color/textColorSecondary" />

    <View
        android:id="@+id/vw_another"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginTop="@dimen/dimen_8"
        android:alpha="0.5"
        android:background="@color/dividerColor"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btn_another"
        style="@style/TextView.Italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@drawable/btn_primary"
        android:paddingVertical="@dimen/dimen_8"
        android:text="@string/try_another_way"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_12"
        android:visibility="gone" />
</LinearLayout>