<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingHorizontal="@dimen/dimen_16"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_16">

        <TextView
            style="@style/TextView.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_recovery_email"
            android:textSize="@dimen/text_24" />

        <TextView
            style="@style/TextView.Italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_desc"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/bg_border_light_radius_10"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <TextView
                style="@style/TextView.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email"
                android:textColor="@color/textColorSecondary" />

            <EditText
                android:id="@+id/txt_email"
                style="@style/EditText.Regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_56"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/bg_light_radius_10"
                android:hint="@string/hint_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/max_length_email"
                android:maxLines="1"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_confirm"
            style="@style/Button.GreyRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/confirm" />

        <TextView
            style="@style/TextView.Italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@drawable/bg_dark_radius_10"
            android:padding="@dimen/dimen_16"
            android:text="@string/tips_security"
            android:textColor="@color/textColorSecondary" />
    </LinearLayout>
</ScrollView>