<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingHorizontal="@dimen/dimen_16"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_16">

        <TextView
            style="@style/TextView.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="@dimen/text_24" />

        <TextView
            android:id="@+id/lbl_desc"
            style="@style/TextView.Italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_activities_desc"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_12" />

        <LinearLayout
            android:id="@+id/ll_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/bg_border_light_radius_10"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <TextView
                style="@style/TextView.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_installed_time"
                android:textSize="@dimen/text_16" />

            <RadioGroup
                android:id="@+id/radgr_install_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical" />

            <TextView
                style="@style/TextView.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/question_logged_in_time"
                android:textSize="@dimen/text_16" />

            <RadioGroup
                android:id="@+id/radgr_login_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical" />

            <TextView
                style="@style/TextView.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/question_last_added_content_type"
                android:textSize="@dimen/text_16" />

            <RadioGroup
                android:id="@+id/radgr_last_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:orientation="vertical" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_confirm"
            style="@style/Button.GreyRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/confirm" />
    </LinearLayout>
</ScrollView>