<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_16">

        <TextView
            style="@style/TextView.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/files_anti_lost_desc"
            android:textSize="@dimen/text_15" />

        <TextView
            style="@style/TextView.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/tips_security"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/btn_confirm"
            style="@style/Button.AccentRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginVertical="@dimen/dimen_24"
            android:text="@string/got_it" />
    </LinearLayout>
</ScrollView>